--- a/src/components/LatestArticles.astro
+++ b/src/components/LatestArticles.astro
@@ -28,8 +28,9 @@ const allPosts = await getCollection("blog");
         )
       )
     }
-    <a class="text-preset-6" href={import.meta.env.BASE_URL + "/blog"}
-      >View all articles</a
+    <a
+      class="text-preset-6 underline decoration-blue-500 decoration-3"
+      href={import.meta.env.BASE_URL + "/blog"}>View all articles</a
     >
   </div>
 </section>
