add dark/light mode

--- a/src/components/LatestArticles.astro
+++ b/src/components/LatestArticles.astro
@@ -19,7 +19,7 @@ const allPosts = await getCollection("blog");
             >
               {post.data.title}
             </a>
-            <span class="text-preset-8-italic">
+            <span class="text-preset-8 italic">
               {formatDate(post.data.publishedAt)}
             </span>
           </div>
