--- a/src/components/NewsletterForm.astro
+++ b/src/components/NewsletterForm.astro
@@ -9,7 +9,7 @@
       type="text"
       id="email"
       name="email"
-      class=`border border-neutral-600 bg-neutral-800 rounded-[10px] px-4 py-3 text-preset-7 w-full hover:cursor-pointer hover:bg-neutral-700 focus:border-b-blue-500 active:border-blue-500`
+      class=`border border-neutral-300 dark:border-neutral-600 bg-neutral-200 dark:bg-neutral-800 rounded-[10px] px-4 py-3 text-preset-7 w-full hover:cursor-pointer hover:bg-neutral-100 dark:hover:bg-neutral-700 focus:border-b-blue-500 active:border-blue-500`
       placeholder="email@example.com"
       required
     />
