--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -28,7 +28,7 @@ const allPosts = await getCollection("blog");
               >
                 {post.data.title}
               </a>
-              <p class="text-preset-8-italic">
+              <p class="text-preset-8 italic">
                 {formatDate(post.data.publishedAt)}
               </p>
               <p>{post.data.description}</p>
