--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -39,16 +39,16 @@ const socials = [
         <li class="fill-neutral-0">
           <a
             href={social.name + "-logo"}
-            class="flex justify-center items-center rounded-[10px] w-[40px] h-[40px] border border-neutral-700"
+            class="flex justify-center items-center rounded-[10px] w-[40px] h-[40px] border border-neutral-200 dark:border-neutral-700 bg-neutral-0 dark:bg-neutral-800"
           >
-            <social.image class="fill-neutral-0" />
+            <social.image class="fill-neutral-700 dark:fill-neutral-0" />
           </a>
         </li>
       ) : (
         // Small icon
         <li class="fill-neutral-0">
           <a href="" class="">
-            <social.image class="fill-neutral-400" />
+            <social.image class="fill-neutral-600 dark:fill-neutral-400" />
           </a>
         </li>
       )
