--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ import "../styles/global.css";
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -24,7 +24,7 @@ import "../styles/global.css";
       <div class="w-full h-[100vh] px-2">
         <!-- borders -->
         <div
-          class="flex flex-col gap-8 lg:gap-12 h-fit border-x border-neutral-700 pt-8 px-3"
+          class="flex flex-col gap-8 lg:gap-12 h-fit border-x border-neutral-200 dark:border-neutral-700 pt-8 px-3"
         >
           <slot />
           <Footer />
