--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
 
 @font-face {
     font-family: 'DM Sans';
@@ -42,23 +43,26 @@
 
     --color-red-400 : #F04438;
     --color-red-600 : #D92D20;
+
+    --background-dark : var(--color-neutral-900);
+    --background-light : var(--color-neutral-100);
 }
 
 @layer components {
     body {
         width: 100%;
         height: 100%;
-        background-color: var(--color-neutral-900);
         padding: 16px;
         display: flex;
         justify-content: center;
     }
+
+
     h1, .text-preset-1 {
         font-size: 40px;
         font-weight: 800;
         line-height: 130%;
         letter-spacing: -1px;
-        color: var(--color-neutral-0);
     }
 
     h2, .text-preset-2 {
@@ -66,7 +70,6 @@
         font-weight: 800;
         line-height: 130%;
         letter-spacing: -0.5px;
-        color: var(--color-neutral-0);
     }
 
     h3, .text-preset-3 {
@@ -74,7 +77,6 @@
         font-weight: 700;
         line-height: 130%;
         letter-spacing: -0.5px;
-        color: var(--color-neutral-0);
     }
 
     h4, .text-preset-4 {
@@ -82,7 +84,6 @@
         font-weight: 600;
         line-height: 130%;
         letter-spacing: -0.5px;
-        color: var(--color-neutral-0);
     }
 
     h5, .text-preset-5 {
@@ -90,7 +91,6 @@
         font-weight: 600;
         line-height: 130%;
         letter-spacing: -0.5px;
-        color: var(--color-neutral-0);
     }
 
     h6, thead, .text-preset-6 {
@@ -98,7 +98,6 @@
         font-weight: 500;
         line-height: 150%;
         letter-spacing: -0.5px;
-        color: var(--color-neutral-0);
     }
 
     p, li, blockquote, .text-preset-7 {
@@ -106,21 +105,14 @@
         font-weight: 400;
         line-height: 150%;
         letter-spacing: -0.2px;
-        color: var(--color-neutral-400);
     }
 
     blockquote {
-        color: var(--color-neutral-0);
-        border-left: 4px solid var(--color-neutral-600);
+        border-left: 4px solid var(--color-neutral-400);
         padding: 6px 12px
     }
-
-    .text-preset-7-semibold {
-        font-size: 18px;
-        font-weight: 500;
-        line-height: 150%;
-        letter-spacing: -0.2px;
-        color: var(--color-neutral-400);
+    .dark blockquote {
+        border-left: 4px solid var(--color-neutral-700);
     }
 
     span, tbody, .text-preset-8 {
@@ -128,16 +120,6 @@
         font-weight: 400;
         line-height: 130%;
         letter-spacing: -0.2px;
-        color: var(--color-neutral-400);
-    }
-
-    .text-preset-8-italic {
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 130%;
-        letter-spacing: -0.2px;
-        color: var(--color-neutral-400);
-        font-style: italic;
     }
 
     .text-preset-9, code {
@@ -150,7 +132,6 @@
 
     hr {
         border-width: 1px;
-        border-color: var(--color-neutral-700);
     }
 
     ul {
@@ -167,7 +148,7 @@
         display: block;
         overflow-x: auto;
         width: 100%;
-        outline: 2px solid var(--color-neutral-700);
+        /* outline: 2px solid var(--color-neutral-700); */
         border-radius: 8px;
         border-collapse: separate;
         border-spacing: 0;
@@ -187,40 +168,96 @@
     }
 
     th, td {
-        border: 1px solid var(--color-neutral-700);
+        /* border: 1px solid var(--color-neutral-700); */
         padding: 6px 12px;
         background: none;
     }
+
     /* Remove outer borders on table edge */
     table tr:first-child th {
-    border-top: none;
+        border-top: none;
     }
 
     table tr:last-child td {
-    border-bottom: none;
+        border-bottom: none;
     }
 
     table tr td:first-child,
     table tr th:first-child {
-    border-left: none;
+        border-left: none;
     }
 
     table tr td:last-child,
     table tr th:last-child {
-    border-right: none;
+        border-right: none;
     }
 
     li code, p code {
-    background-color: var(--color-neutral-700);
-    padding: 1px 2px;
-    border-radius: 4px;
-    color: var(--color-neutral-0);
+        background-color: var(--color-neutral-200);
+        padding: 1px 2px;
+        border-radius: 4px;
+    }
+
+    .dark :is(li code, p code) {
+        background-color: var(--color-neutral-700);
     }
 
     pre {
-    border-radius: 12px;
-    border: 1px solid var(--color-neutral-700);
-    padding: 10px;
-    overflow-x: auto;
+        border-radius: 12px;
+        border: 1px solid var(--color-neutral-700);
+        padding: 10px;
+        overflow-x: auto;
+    }
+
+
+    /* Light mode */
+    body {
+        background-color: var(--color-neutral-100);
+    }
+    :is(h1, h2, h3, h4, h5, h6, thead,
+    .text-preset-1, .text-preset-2,
+    .text-preset-3, .text-preset-4,
+    .text-preset-5, .text-preset-6) {
+        color: var(--color-neutral-700);
+    }
+    :is(p, li, blockquote, span, tbody,
+    .text-preset-7, .text-preset-8) {
+        color: var(--color-neutral-600)
+    }
+    hr {
+        border-color: var(--color-neutral-300);
+    }
+    /* Dark mode */
+    .dark body {
+        background-color: var(--color-neutral-900);
+    }
+    .dark :is(h1, h2, h3, h4, h5, h6, thead,
+    .text-preset-1, .text-preset-2,
+    .text-preset-3, .text-preset-4,
+    .text-preset-5, .text-preset-6) {
+        color: var(--color-neutral-0);
+    }
+
+    .dark :is(p, li, blockquote, span, tbody,
+    .text-preset-7, .text-preset-8) {
+        color: var(--color-neutral-400)
+    }
+
+    hr {
+        border-color: var(--color-neutral-200);
+    }
+    .dark hr {
+        border-color: var(--color-neutral-700);
+    }
+
+    :is(table, th, td) {
+        border: 1px solid var(--color-neutral-200);
+    }
+    .dark :is(table, th, td) {
+        border: 1px solid var(--color-neutral-700);
+    }
+
+    html {
+        --shiki-color-background: var(--color-neutral-200);
     }
 }
