--- a/src/components/ThemeToggleButton.astro
+++ b/src/components/ThemeToggleButton.astro
@@ -13,10 +13,25 @@ import MoonIcon from "../../public/assets/images/icon-moon.svg";
 </button>
 
 <script>
+  // const root = document.documentElement;
+  // const themeToggleButton = document.getElementById("theme-toggle-button");
+
+  // themeToggleButton?.addEventListener("click", () => {
+  //   root.classList.toggle("dark");
+  // });
   const root = document.documentElement;
   const themeToggleButton = document.getElementById("theme-toggle-button");
+  const savedTheme = localStorage.getItem("theme");
+
+  // Apply saved theme on load
+  if (savedTheme) {
+    root.classList.add(savedTheme);
+  }
 
   themeToggleButton?.addEventListener("click", () => {
-    root.classList.toggle("dark");
+    const isDark = root.classList.toggle("dark");
+    const newTheme = isDark ? "dark" : "light";
+    localStorage.setItem("theme", newTheme);
+    console.log(newTheme);
   });
 </script>
