--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,8 +2,6 @@
 import Divider from "./Divider.astro";
 import MenuIcon from "../../public/assets/images/icon-menu.svg";
 import MenuCloseIcon from "../../public/assets/images/icon-menu-close.svg";
-import SunIcon from "../../public/assets/images/icon-sun.svg";
-import MoonIcon from "../../public/assets/images/icon-moon.svg";
 import ThemeToggleButton from "./ThemeToggleButton.astro";
 
 const navLinks = [
@@ -74,7 +72,10 @@ const endpoint = segments[2];
         navLinks.map((navLink, index) => (
           <>
             <li>
-              <a class="text-preset-8" href={navLink.href}>
+              <a
+                class="text-preset-8"
+                href={import.meta.env.BASE_URL + "/" + navLink.href}
+              >
                 {navLink.name}
               </a>
             </li>
