--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,14 +17,14 @@ import "../styles/global.css";
     <meta name="generator" content={Astro.generator} />
     <title>Personal Blog</title>
   </head>
-  <body>
+  <body class="pb-0">
     <div class="w-full max-w-[640px]">
       <Navbar />
       <!-- outer padding -->
       <div class="w-full h-[100vh] px-2">
         <!-- borders -->
         <div
-          class="flex flex-col gap-8 lg:gap-12 h-fit border-x border-neutral-200 dark:border-neutral-700 pt-8 px-3"
+          class="flex flex-col gap-8 lg:gap-12 h-full border-x border-neutral-200 dark:border-neutral-700 pt-8 px-3"
         >
           <slot />
           <Footer />
