--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ import "../styles/global.css";
       <div class="w-full h-[100vh] px-2">
         <!-- borders -->
         <div
-          class="flex flex-col gap-8 lg:gap-12 h-full border-x border-neutral-200 dark:border-neutral-700 pt-8 px-3"
+          class="flex flex-col gap-8 lg:gap-12 border-x border-neutral-200 dark:border-neutral-700 pt-8 px-3"
         >
           <slot />
           <Footer />
