--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,10 +21,10 @@ import "../styles/global.css";
     <div class="w-full max-w-[640px]">
       <Navbar />
       <!-- outer padding -->
-      <div class="w-full h-[100vh] px-2">
+      <div class="w-full px-2">
         <!-- borders -->
         <div
-          class="flex flex-col gap-8 lg:gap-12 border-x border-neutral-200 dark:border-neutral-700 pt-8 px-3"
+          class="h-full flex flex-col gap-8 lg:gap-12 border-x border-neutral-200 dark:border-neutral-700 pt-8 px-3"
         >
           <slot />
           <Footer />
