--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import Divider from "./Divider.astro";
 import Socials from "./Socials.astro";
 ---
 
-<footer class="w-full">
+<footer class="w-full mt-auto">
   <Divider />
   <section class="flex py-4">
     <span class="mr-auto">Made with ❤️ and ☕️</span>
