--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,9 +1,10 @@
 ---
 const { size } = Astro.props;
-import GithubLogo from "../../public/assets/images/logo-github.svg";
-import XLogo from "../../public/assets/images/logo-x.svg";
-import LinkedinLogo from "../../public/assets/images/logo-linkedin.svg";
-import FrontendmentorLogo from "../../public/assets/images/logo-frontend-mentor.svg";
+// import GithubLogo from "/assets/images/logo-github.svg";
+import GithubLogo from "../assets/images/logo-github.svg";
+import XLogo from "../assets/images/logo-x.svg";
+import LinkedinLogo from "../assets/images/logo-linkedin.svg";
+import FrontendmentorLogo from "../assets/images/logo-frontend-mentor.svg";
 
 const socials = [
   {
