--- a/src/components/ThemeToggleButton.astro
+++ b/src/components/ThemeToggleButton.astro
@@ -1,6 +1,6 @@
 ---
-import SunIcon from "../../public/assets/images/icon-sun.svg";
-import MoonIcon from "../../public/assets/images/icon-moon.svg";
+import SunIcon from "../assets/images/icon-sun.svg";
+import MoonIcon from "../assets/images/icon-moon.svg";
 ---
 
 <!-- Theme button -->
