add underline to title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,9 @@ import Layout from "../layouts/Layout.astro";
 <Layout>
   <!-- COMPONENT -->
   <section class="flex flex-col gap-6">
-    <h2>Hi, I'm Paulina 👋</h2>
+    <h2 class="underline decoration-blue-500 decoration-3">
+      Hi, I'm Paulina 👋
+    </h2>
     <p>
       I'm on a journey to become a front-end web developer. I love building
       little projects, trying out new coding techniques, and sharing what I
