--- a/src/components/LatestArticles.astro
+++ b/src/components/LatestArticles.astro
@@ -7,7 +7,10 @@ const allPosts = await getCollection("blog");
 ---
 
 <section class="flex flex-col gap-8">
-  <h2>Latest Articles</h2>
+  <div class="flex items-end gap-3">
+    <h2>Latest Articles</h2>
+    <hr class="border-blue-500 border-2 w-[40px] mb-2" />
+  </div>
   <div class="flex flex-col gap-6">
     {
       allPosts.map((post: any, index) =>
