--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -33,7 +33,7 @@ const endpoint = segments[2];
       navLinks.map((navLink) => (
         <li>
           <a
-            class={`text-preset-8 ${navLink.href == endpoint ? "underline decoration-blue-500 decoration-3" : ""} `}
+            class={`text-preset-8 ${navLink.href === endpoint ? "underline decoration-blue-500 decoration-3" : ""} `}
             href={import.meta.env.BASE_URL + "/" + navLink.href}
           >
             {navLink.name}
@@ -73,7 +73,7 @@ const endpoint = segments[2];
           <>
             <li>
               <a
-                class="text-preset-8"
+                class={`text-preset-8 ${navLink.href === endpoint ? "text-neutral-900 dark:text-neutral-0" : ""}`}
                 href={import.meta.env.BASE_URL + "/" + navLink.href}
               >
                 {navLink.name}
